# AI-Flash-Card-Builder

./: .gitignore  Claude_Certification_Program_exam_Guide.md  README.md  claude_exam_questions.csv  claude_exam_questions.json  crawl_and_build_faiss.py  exam_likeness_evaluator.py  page_classifications.csv  pyproject.toml  query_faiss.py  question_builder.py  question_evaluator.py  requirements.txt  taxonomy.py
faiss_claude_docs/: index.pkl
